--- a/IMchat/app/src/main/res/values/strings.xml
+++ b/IMchat/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">IM</string>
-    <string name="user_name_error">用户名不合法，3到20位，首字母必须是英文字符</string>
-    <string name="password_error">密码不合法，3到20位数字</string>
+    <string name="user_name_error">Username is not valid</string>
+    <string name="password_error">Password is not valid</string>
     <string name="confirm_password_error">密码和确认密码不一致</string>
     <string name="registering">正在注册</string>
     <string name="logging">正在登陆</string>
