--- a/IMchat/app/src/main/res/values/strings.xml
+++ b/IMchat/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="message">消息</string>
     <string name="contact">联系人</string>
     <string name="dynamic">动态</string>
-    <string name="logout">退(%s)出</string>
+    <string name="logout">(%s)退出</string>
     <string name="logouting">正在退出...</string>
     <string name="logout_failed">退出失败</string>
     <string name="load_contacts_failed">加载联系人失败</string>
